# mlstorlets

./: README.md  access.cfg  install.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
mlstorlets/sgdproxies/: SGDClassifierProxy.py  SGDRegressorProxy.py  linear_model.py
mlstorlets/sgdstorlet/: linear_model.py
mlstorlets/utils/: __init__.py  invoke_storlet.py  serialize_model.py  swift_access.py
test/: __init__.py
test/functional/: test_file_invocation.py  test_sdgclassifier_proxy.py  test_sdgregressor_proxy.py  test_sgdproxies.py  test_sgdstorlet.py
test/unit/: __init__.py  test_linear_model_storlet.py  test_serialize_classifier.py  test_serialize_regressor.py
