[metadata]
name = mlstorlets
summary = Stochastic Gradient Descent using storlets
description-file =
    README.rst
author = eranrom
author-email = eranr@itsonlyme.name
home-page = itsonlyme.name
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
   mlstorlets.sgdproxies
